Update UI and features

--- a/localkart/package.json
+++ b/localkart/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@tailwindcss/vite": "^4.1.11",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
